--- a/Pages/Error.cshtml
+++ b/Pages/Error.cshtml
@@ -1,8 +1,18 @@
-﻿@page
+﻿@page "/{Code}"
 @model ErrorModel
 @{
     ViewData["Title"] = "Error";
 }
+
+@if (Model.Code == 404)
+{
+    <h1 class="text-danger">404. Not Found.</h1>
+    <h2 class="text-danger">
+        The resource you are looking for might have been removed, had its name changed,
+        or is temporarily unavailable.
+    </h2>
+}
+
 
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
